# unity-catalog-jobs-with-bundle

./: README.md  databricks.yml  delivery.yaml  pyproject.toml  test_create_example_schema.sql
job_definitions/: example_sp_read_env_uc_job.yml  hello_world_job.yml  uc-table-creation.yml  uc_data_read.yml  uc_schemas_creator.yml  uc_table_creation.yml  uc_tables_creation.yml  unity_catalog_tables_updater_job.yml  unity_catalog_tables_updater_pyspark_job.yml
job_sources/config/: __init__.py  uc_schemas.yaml
job_sources/customer_data_sources/: __init__.py  hello_asia_job.py  hello_europe_job.py  hello_world_job.py
job_sources/job_scripts/: create_schemas.py  test_create_external_tables.sql  uc_schemas.yaml
job_sources/tests/: test_main.py
job_sources/unity_catalog_tables_updater/: create_external_table.sql  create_schemas.py  read_message_data
