[tool.poetry]
name = "customer-data-platform"
version = "2025.05.28.1"
description = "Customer360 Project to build meaningful customer data points"
authors = ["Tracking Data Collection <team-tracking-data-collection@zalando.de>"]
readme = "README.md"
packages = [
    { include = "customer_data_sources", from = "job_sources" },
    { include = "unity_catalog_tables_updater", from = "job_sources" },
    { include = "tests", from = "job_sources" }
]

# Include, in the python bundles, all files that impact the software behaviour
include = [
  "**/*.yaml",
  "**/*.sql"
]


[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.5.0"
pytest = "^7.0"
databricks-sdk = "^0.30.0"
pyyaml = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
hello_europe_job = "customer_data_sources.hello_europe_job:main"
hello_asia_job = "customer_data_sources.hello_asia_job:main"
hello_world_job = "customer_data_sources.hello_world_job:main"
example_sp_read_uc = "customer_data_sources.example_sp_read_env_uc_job:main"
create_schemas_job = "unity_catalog_tables_updater.create_schemas_job:main"
