[tool.poetry]
name = "customer-data-platform"
version = "2025.05.28.1"
description = "Customer360 Project to build meaningful customer data points"
authors = ["Tracking Data Collection <team-tracking-data-collection@zalando.de>"]
readme = "README.md"
packages = [
    { include = "job_scripts", from = "job_sources" },
    { include = "config", from = "job_sources" }
]

# Include, in the python bundles, all files that impact the software behaviour
include = [
  "**/*.yaml",
  "**/*.sql"
]


[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.5.0"
pytest = "^7.0"
databricks-sdk = "^0.30.0"
pyyaml = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
uc_table_read = "job_scripts.read_message_data:main"
uc_schemas_creator = "job_scripts.create_schemas:main"
